tests/e2e/when_invalid_action3.story
when app listen path: "/" as r
    r write content: "foobar"
